# Onto_Research

./: .gitignore  LICENSE  README.md  langgraph.json  langgraph_startup.sh  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
notebooks/: 0_from_structure_to_graph .ipynb  0_from_text_to_graph.ipynb  1. Initial_lab.ipynb
project/: Project Description.md
src/db/ontologies/: aboutme.md
src/funcs/: graph_tools.py
src/pipelines/: unestructured_pipeline.py
src/robots/LifeScience_Agents/: hetionet_agent.py  hetionet_connection.py  test_hetionet_agent.py
src/servers/: kg_mcp.py
